--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "bootstrap": "5.3",
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "firebase": "^10.7.0",
+    "infinite-loading-vue3-ts": "^1.0.5",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.2",
     "sockjs-client": "^1.6.1",
-    "vue": "^3.2.13",
-    "infinite-loading-vue3-ts": "^1.0.5",
     "v3-infinite-loading": "^1.3.1",
     "vue": "^3.3.9",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
     "webstomp-client": "^1.2.6"
@@ -54,7 +55,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "no-unused-components": "off"
     }
   },
   "browserslist": [
